# code-space-blank-repo

./: Logs.txt  README.md  git_info.py  prompt_for_consolidations.ipynb  promptexp.ipynb  using_libraryio.ipynb  versions_data.csv
Code_for_Embeddings/: IndexingV1.ipynb  document.csv  documentv1.csv  documentv2.csv  git_info.py  helper.py  indexing.ipynb  indexing_recommendations.ipynb  result.csv  stuff.csv
Code_for_Embeddings/data/: versions_data.csv  vulnerabilities.csv
data/: parameters.xlsx  versions_data.csv
data-embedding/: convert_to_hf_datasets.py  main.py  pyproject.toml  requirements.txt
data-embedding/hf_dataset/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
data-embedding/md/: D57457_pdf.md  D61254_pdf.md  D75624_pdf.md  D75733_pdf.md  D75929_pdf.md  D76084_pdf.md  D76146_pdf.md  D76164_pdf.md  D76168_pdf.md  D76205_pdf.md  D76235_pdf.md  D76263_pdf.md  D76270_pdf.md  D76287_pdf.md  D76324_pdf.md  D76345_pdf.md  D76378_pdf.md  D76409_pdf.md  D76423_pdf.md  D76435_pdf.md  D76444_pdf.md  D76445_pdf.md  D76457_pdf.md  D76459_pdf.md  D76466_pdf.md  D76476_pdf.md  D76481_pdf.md  D76487_pdf.md  D76495_pdf.md  D76506_pdf.md  D76522_pdf.md  D76523_pdf.md  D76538_pdf.md  D76539_pdf.md  D76551_pdf.md  D76552_pdf.md  D76610_pdf.md  D76626_pdf.md  D76627_pdf.md  D76638_pdf.md  (+156 more)
