[project]
name = "data-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.4",
    "kaleido<0.2.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
]
